# app-robot-server

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  containers.bzl  deps.bzl  go.mod  go.sum  main.go
config/: BUILD.bazel  config.go  config.yaml
controller/v1/: BUILD.bazel  account.go  base.go  instance.go  plugins.go
dbmodels/: BUILD.bazel  db.go  instance.go  plugins.go  user.go
docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
global/: BUILD.bazel  const.go  error.go  validate.go
k8s/: BUILD.bazel  client.go
logs/: BUILD.bazel  log.go
middleware/: BUILD.bazel  Logger.go  cross_domain.go  jwt.go
models/: BUILD.bazel  account.go  base.go  instance.go  jwt.go  plugins.go
models/request/: BUILD.bazel  account.go
models/response/: BUILD.bazel  account.go  base.go
mongodb/: BUILD.bazel  error.go  instance.go  mongodb.go  ops.go  plugins.go  users.go  util.go
router/: BUILD.bazel  route.go
service/: BUILD.bazel  account.go
utils/: BUILD.bazel  encryption.go  regexps.go
