load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/opensourceways/app-robot-server
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/opensourceways/app-robot-server",
    visibility = ["//visibility:private"],
    deps = [
        "//config:go_default_library",
        "//logs:go_default_library",
        "//router:go_default_library",
    ],
)

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/robot-gitee-plugin-checkpr"],
    files = [":app-robot-server"],
    repository = "swr.ap-southeast-1.myhuaweicloud.com/opensourceway/app-robot-server",
)

container_push(
    name = "image-push",
    format = "Docker",
    image = ":image",
    registry = "swr.ap-southeast-1.myhuaweicloud.com",
    repository = "opensourceway/app-robot-server",
)

go_binary(
    name = "app-robot-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
