load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/opensourceways/app-robot-server/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fsnotify_fsnotify//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
