load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "error.go",
        "plugins.go",
        "user.go",
    ],
    importpath = "github.com/opensourceways/app-robot-server/dbmodels",
    visibility = ["//visibility:public"],
    deps = ["//global:go_default_library"],
)
