load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "const.go",
        "error.go",
        "validate.go",
    ],
    importpath = "github.com/opensourceways/app-robot-server/global",
    visibility = ["//visibility:public"],
    deps = ["@com_github_go_playground_validator_v10//:go_default_library"],
)
