load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "Logger.go",
        "cross_domain.go",
        "jwt.go",
    ],
    importpath = "github.com/opensourceways/app-robot-server/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//global:go_default_library",
        "//logs:go_default_library",
        "//models:go_default_library",
        "//models/response:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
