load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jwt.go"],
    importpath = "github.com/opensourceways/app-robot-server/models",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
    ],
)
