load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["account.go"],
    importpath = "github.com/opensourceways/app-robot-server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//global:go_default_library",
        "//logs:go_default_library",
        "//models:go_default_library",
        "//models/request:go_default_library",
        "//models/response:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
    ],
)
