load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "account.go",
        "base.go",
    ],
    importpath = "github.com/opensourceways/app-robot-server/controller/v1",
    visibility = ["//visibility:public"],
    deps = [
        "//global:go_default_library",
        "//models/request:go_default_library",
        "//models/response:go_default_library",
        "//service:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)
